--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-fastapi
-uvicorn
-google-generativeai>=0.4.0
+fastapi==0.110.0
+uvicorn==0.27.1
+python-multipart==0.0.7
+anthropic==0.18.1
+python-dotenv==1.0.1
+pydantic==2.6.1
+google-generativeai==0.4.0
